# ParallelMind

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/concepts/: 01-event-loop.md  02-redis-queue.md  03-async-db-and-fastapi.md  04-gil-threads-processes.md
experiments/: 01_async_throughput.py  02_cpu_backends.py
src/parallelmind/: __init__.py  config.py  dispatcher.py
src/parallelmind/api/: app.py  deps.py  schemas.py
src/parallelmind/api/routes/: tasks.py
src/parallelmind/executors/: backends.py  base.py  cpu_bound.py  registry.py  simulated.py
src/parallelmind/models/: __init__.py  enums.py  task.py
src/parallelmind/observability/: logging.py
src/parallelmind/queue/: base.py  in_memory.py  redis_queue.py
src/parallelmind/storage/: db.py  models.py  task_repo.py
src/parallelmind/workers/: async_worker.py
tests/integration/: test_api.py  test_redis_runtime.py
tests/unit/: test_backends.py  test_in_memory_queue.py  test_task_state_machine.py
